--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
 
   <style>
     :root{
-      --bg:#0f1724;
-      --card:#0b1220;
+      --bg:#0b1220;
+      --card:#0f172a;
       --muted:#9aa4b2;
       --accent:#60a5fa;
-      --accent2:#6ee7b7;
+      --accent2:#34d399;
     }
 
     *{box-sizing:border-box}
+
     body{
       margin:0;
       font-family:Inter,system-ui,Segoe UI,Arial;
-      background:linear-gradient(180deg,#071226 0%,#081021 60%);
+      background:
+        radial-gradient(800px 400px at 10% -10%, rgba(96,165,250,.15), transparent),
+        radial-gradient(800px 400px at 90% 10%, rgba(52,211,153,.12), transparent),
+        linear-gradient(180deg,#050b18 0%,#081021 60%);
       color:#e6eef8;
     }
 
@@ -33,11 +37,10 @@
     header{
       display:flex;
       align-items:center;
-      gap:32px;
+      gap:36px;
       flex-wrap:wrap;
     }
 
-    /* Avatar wrapper */
     .avatar-wrap{
       position:relative;
       width:180px;
@@ -45,18 +48,16 @@
       flex-shrink:0;
     }
 
-    /* Blob xanh phía sau */
     .avatar-bg{
       position:absolute;
-      inset:0;
+      inset:-8px;
       border-radius:50%;
       background:linear-gradient(135deg,var(--accent),var(--accent2));
-      filter:blur(0);
-      transform:scale(1.08);
+      filter:blur(18px);
+      opacity:.85;
       z-index:0;
     }
 
-    /* Avatar tròn */
     .avatar{
       position:relative;
       width:100%;
@@ -65,7 +66,7 @@
       overflow:hidden;
       background:#fff;
       z-index:1;
-      box-shadow:0 20px 50px rgba(0,0,0,.35);
+      box-shadow:0 25px 60px rgba(0,0,0,.45);
     }
 
     .avatar img{
@@ -83,22 +84,26 @@
       color:var(--muted);
       margin:8px 0 14px;
       max-width:520px;
+      line-height:1.6;
     }
 
     .btn{
       display:inline-block;
-      padding:10px 16px;
-      border-radius:10px;
+      padding:10px 18px;
+      border-radius:12px;
       background:var(--accent);
-      color:#042025;
+      color:#041421;
       font-weight:600;
       text-decoration:none;
       margin-right:8px;
+      transition:.2s;
     }
+
+    .btn:hover{opacity:.9}
 
     .btn.alt{
       background:transparent;
-      border:1px solid rgba(255,255,255,.15);
+      border:1px solid rgba(255,255,255,.18);
       color:#e6eef8;
     }
 
@@ -107,28 +112,30 @@
       display:grid;
       grid-template-columns:1fr 340px;
       gap:26px;
-      margin-top:40px;
+      margin-top:44px;
     }
 
     .card{
-      background:linear-gradient(180deg,rgba(255,255,255,.03),rgba(255,255,255,.01));
-      padding:20px;
-      border-radius:14px;
-      box-shadow:0 10px 30px rgba(2,6,23,.6);
+      background:
+        linear-gradient(180deg,rgba(255,255,255,.06),rgba(255,255,255,.02));
+      padding:22px;
+      border-radius:18px;
+      box-shadow:0 14px 40px rgba(2,6,23,.6);
+      backdrop-filter:blur(6px);
     }
 
     .skills{
       display:flex;
       flex-wrap:wrap;
-      gap:8px;
-      margin-top:10px;
+      gap:10px;
+      margin-top:14px;
     }
 
     .chip{
-      padding:6px 12px;
+      padding:6px 14px;
       border-radius:999px;
-      background:rgba(255,255,255,.05);
-      color:var(--muted);
+      background:rgba(255,255,255,.08);
+      color:#cbd5e1;
       font-size:.9rem;
     }
 
@@ -136,15 +143,15 @@
       display:flex;
       justify-content:space-between;
       align-items:center;
-      padding:12px;
-      border-radius:12px;
-      background:rgba(255,255,255,.04);
-      margin-top:10px;
+      padding:14px;
+      border-radius:14px;
+      background:rgba(255,255,255,.05);
+      margin-top:14px;
     }
 
     footer{
       text-align:center;
-      margin-top:40px;
+      margin-top:50px;
       color:var(--muted);
       font-size:.9rem;
     }
@@ -175,7 +182,6 @@
     <div class="avatar-wrap">
       <div class="avatar-bg"></div>
       <div class="avatar">
-        <!-- 🔴 ĐỔI ẢNH Ở ĐÂY -->
         <img src="assets/img/avatar.jpg" alt="Bùi Uyên">
       </div>
     </div>
@@ -210,7 +216,7 @@
         </div>
       </div>
 
-      <div id="projects" class="card" style="margin-top:20px">
+      <div id="projects" class="card" style="margin-top:22px">
         <h2>Dự án</h2>
 
         <div class="project">
@@ -226,11 +232,11 @@
     <aside>
       <div class="card">
         <h3>Thông tin</h3>
-        <p class="lead">Hà Nội, Việt Nam</p>
-        <p class="lead">Email: hello@buiuyen.dev</p>
+        <p class="lead">📍 Hà Nội, Việt Nam</p>
+        <p class="lead">✉️ hello@buiuyen.dev</p>
       </div>
 
-      <div id="contact" class="card" style="margin-top:20px">
+      <div id="contact" class="card" style="margin-top:22px">
         <h3>Liên hệ</h3>
         <a class="btn" href="mailto:hello@buiuyen.dev">Gửi email</a>
       </div>
